# comply-repo

./: .gitignore  README.md  pyproject.toml  setup.py  setup_config_pub.py
.github/workflows/: python-package.yml
comply/: __init__.py  main.py  test.py
comply/complyLocal/: comply_.py  tests_main.py
comply/complyLocal/tests/: test_comply.py
comply2/: __init__.py
